samples/_failures_safe/1761193936_69621c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f1842dd.c: In function ‘main’:
./samples/SAFE/__tmp_7f1842dd.c:141:28: error: missing terminating " character
  141 |                     printf("Invalid
      |                            ^~~~~~~~
./samples/SAFE/__tmp_7f1842dd.c:141:21: error: expected expression at end of input
  141 |                     printf("Invalid
      |                     ^~~~~~
./samples/SAFE/__tmp_7f1842dd.c:141:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f1842dd.c:141:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f1842dd.c:141:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f1842dd.c:141:21: error: expected declaration or statement at end of input
